# ConfigInfo

./: CMakeLists.txt  ConfigInfo.xml  README.md  azure-pipelines.yml  gui.cpp  gui.h  httpServer.cpp  httpServer.h  main.cpp  pch.h  xmlInfo.cpp  xmlInfo.h
